- Finished facebook /welcome/ stuff. - Use the thumbnail, not the snapshot. - Renamed the constant that refers to the default thumbnail.   - There are a few bits of code that now don't make sense.

--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -35,3 +35,10 @@ m.new_room_name = {0}'s Room
 m.new_room_door = {0}'s Home
 
 m.favorites_list_name = Favorites
+
+
+# welcome servlet: sharing on facebook
+m.room_share_title = Visit this room on Whirled: {0}
+m.room_share_desc = You too can create anything on Whirled!
+m.game_share_title = Play this game on Whirled: {0}
+m.game_share_desc = Play games, earn coins, design rooms, chat, have fun!
