Myspace sharing. We can post our embed to their blog.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -219,11 +219,14 @@ b.copy = Copy
 t.social_share = Social networks
 m.social_share = Post this place for your friends to see!
 b.share_facebook = Share on Facebook
+b.share_myspace = Share on Myspace
 
 l.embed_instruction = Copy the HTML below to your blog or website:
 l.link_instruction = Link directly here. Just copy and paste!
 l.email_addresses = Enter email addresses below:
 l.email_message = A personalized message to include:
+m.social_share_room = Check out this user-created room on Whirled!
+m.social_share_game = Check out this user-created game on Whirled!
 
 t.email_share = Email
 t.grab_link = Grab the link
