--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -219,7 +219,7 @@ b.copy = Copy
 t.social_share = Social networks
 m.social_share = Post this place for your friends to see!
 b.share_facebook = Share on Facebook
-b.share_myspace = Share on Myspace
+b.share_myspace = Share on MySpace
 
 l.embed_instruction = Copy the HTML below to your blog or website:
 l.link_instruction = Link directly here. Just copy and paste!
