New facebook share verbiage from Daniel.

--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -38,7 +38,9 @@ m.favorites_list_name = Favorites
 
 
 # welcome servlet: sharing on facebook
-m.room_share_title = Visit this room on Whirled: {0}
-m.room_share_desc = You too can create anything on Whirled!
-m.game_share_title = Play this game on Whirled: {0}
-m.game_share_desc = Play games, earn coins, design rooms, chat, have fun!
+m.room_share_title = Visit '{0}' on Whirled!
+m.room_share_desc = Whirled is a virtual world in your web browser created by players. \
+  Visit and create your own room, free!
+m.game_share_title = Play '{0}' on Whilred!
+m.game_share_desc = Whirled is a virtual world where you can play games and create rooms, \
+  avatars and more, all in your web browser.
