Match this client-generated verbiage.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -225,8 +225,8 @@ l.embed_instruction = Copy the HTML below to your blog or website:
 l.link_instruction = Link directly here. Just copy and paste!
 l.email_addresses = Enter email addresses below:
 l.email_message = A personalized message to include:
-m.social_share_room = Check out this user-created room on Whirled!
-m.social_share_game = Check out this user-created game on Whirled!
+m.social_share_room = Visit '{0}' on Whirled!
+m.social_share_game = Play '{0}' on Whirled!
 
 t.email_share = Email
 t.grab_link = Grab the link
