Oops, not Whilred

--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -41,6 +41,6 @@ m.favorites_list_name = Favorites
 m.room_share_title = Visit '{0}' on Whirled!
 m.room_share_desc = Whirled is a virtual world in your web browser created by players. \
   Visit and create your own room, free!
-m.game_share_title = Play '{0}' on Whilred!
+m.game_share_title = Play '{0}' on Whirled!
 m.game_share_desc = Whirled is a virtual world where you can play games and create rooms, \
   avatars and more, all in your web browser.
