--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -44,3 +44,6 @@ m.room_share_desc = Whirled is a virtual world in your web browser created by pl
 m.game_share_title = Play '{0}' on Whirled!
 m.game_share_desc = Whirled is a virtual world where you can play games and create rooms, \
   avatars and more, all in your web browser.
+m.item_share_title = Buy '{0}' on Whirled!
+m.item_share_desc = Whirled is a virtual world in your web browser created by players. \
+  This item is for sale in the shop. Description: '{0}'.
