Let banned people know what's up. My local build's being screwy so I'm just going to test this on dev.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -43,6 +43,7 @@ m.no_such_user = No account could be found for the supplied email address.
 m.invalid_password = The password entered was incorrect.
 m.server_closed = The server is currently under maintenance.
 m.no_guests = Guests access is not currently enabled.
+m.banned = Sorry! Due to links with banned accounts, your access to Whirled has been blocked. If you believe this is in error, please use the <a href="http://www.whirled.com/#support">"Contact Us"</a> form to inquire about your account''s status.
 
 # Tips
 #m.tip_1 = Tip: Use your browser's back button to return to the previous room.
