--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -129,6 +129,7 @@ m.no_penders_party = There are no games being played right now. Create your own 
 b.tsp_join = Join
 b.tsp_play = Play
 b.tsp_watch = Watch
+b.info = Info
 
 m.tsp_players = {0} players, {1} openings
 m.tsp_in_progress = {0} playing
