Add a translation for the lobby menu item, order the menu slightly more sanely. I don't really like the ambiguity of "Invite friends to play" but I'm not sure what better text to use. Maybe we just nix it from this gargantuan-becoming menu and come up with more real reasons to share the game rather than just because you want to help Whirled out from the goodness of your own heart.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -158,11 +158,12 @@ i.scores = View scores
 b.gameInstructions = Instructions
 b.gameGroup = Game's Group
 b.gameShop = Game's Shop
+b.gameLobby = Game's Lobby
 b.gameComment = Comment
-b.gameTrophies = Trophies
 b.gameInvite = Invite friends to play
-b.gameExit = Exit game
+b.gameTrophies = Trophies
 b.gameRemoveTrophies = Remove development trophies
+b.gameExit = Exit game
 
 m.trophies_removed = The trophies you had earned for this in-development game have been removed.
 
