WRLD-580 Using [, |, and ] to delineate special formatting wasn't working because the damn kids have those characters in their names. We retrieve the translations, substitute in their names, and then parse the special formatting. I suppose I could have complicated things by first parsing the message and then hand-substituting the {0} arguments, but then I'm rewriting half of MessageBundle, especially if there are sub-translations.
So: let's use different characters.
There are some unicode chars for "interlinear annotation":
FFF9 (marks start), FFFA (separator), and FFFB (terminator). These seemed
perfect, but they fuck up. They're used internally in certain languages
so maybe it was a bad idea.

There are the "noncharacters" FFFE and FFFF, but those didn't work either.

FFFC and FFFD are used to represent nonprinting replacement characters. We
use FFFC in yohoho to reserve space for a handcrafted glyph, which is
exactly what it's designed for. These two characters work, so I'm running
with them.

If it turns out that kids have FFFC and FFFD in their names, which I can't
fathom because they don't look like anything special, we could
block those at the point where they can be entered.

--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -12,40 +12,46 @@
 # h.foo = help message
 # x.foo = optional translation that may or may not be present
 
-m.friend_online = [{0}|command://ViewMember/{1}] logged on. [Visit|command://VisitMember/{1}].
-m.friend_added = [{0}|command://ViewMember/{1}] is now your friend!
-m.friend_visit = [Visit|command://VisitMember/{0}].
-m.friend_removed = You are no longer friends with [{0}|command://ViewMember/{1}].
+m.friend_online = \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD logged on. \
+  \uFFFCVisit\uFFFCcommand://VisitMember/{1}\uFFFD.
+m.friend_added = \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD is now your friend!
+m.friend_visit = \uFFFCVisit\uFFFCcommand://VisitMember/{0}\uFFFD.
+m.friend_removed = You are no longer friends with \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD.
 m.invite_accepted = {0} just accepted your invitation! Your friend's display name is \
-  [{1}|command://ViewMember//{2}].
+  \uFFFC{1}\uFFFCcommand://ViewMember//{2}\uFFFD.
 
-m.new_release_notes = There are new release notes. [View now|command://PopupNotifications].
+m.new_release_notes = There are new release notes. \
+  \uFFFCView now\uFFFCcommand://PopupNotifications\uFFFD.
 m.level_up = You have advanced to level {0}!
 
-m.new_mail.1 = You have new mail. [Check now|command://ViewMail].
-m.new_mail.n = You have {0} new mails. [Check now|command://ViewMail].
+m.new_mail.1 = You have new mail. \uFFFCCheck now\uFFFCcommand://ViewMail\uFFFD.
+m.new_mail.n = You have {0} new mails. \uFFFCCheck now\uFFFCcommand://ViewMail\uFFFD.
 
-m.game_invite = You have been invited by [{0}|command://ViewMember/{1}] to play {2}. \
-  [Join their game!|command://JoinPlayerGame/{3}/{1}]
-m.follow_invite = You have been invited to follow [{0}|command://ViewMember/{1}]. You can \
-  [accept and follow them|command://RespondFollow/{1}] or simply ignore this invitation.
+m.game_invite = You have been invited by \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD \
+  to play {2}. \uFFFCJoin their game!\uFFFCcommand://JoinPlayerGame/{3}/{1}\uFFFD
+m.follow_invite = You have been invited to follow \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD. \
+  You can \uFFFCaccept and follow them\uFFFCcommand://RespondFollow/{1}\uFFFD \
+  or simply ignore this invitation.
 
-m.room_commented = Your room [{0}|command://ViewRoom/{1}] has received a comment.
-m.profile_commented = Your [profile|command://ViewMember/{0}] has received a comment.
-m.item_commented = The {0} [{1}|command://ViewCommentedItem/{2}/{3}] has received a comment.
+m.room_commented = Your room \uFFFC{0}\uFFFCcommand://ViewRoom/{1}\uFFFD has received a comment.
+m.profile_commented = Your \uFFFCprofile\uFFFCcommand://ViewMember/{0}\uFFFD has received a comment.
+m.item_commented = The {0} \uFFFC{1}\uFFFCcommand://ViewCommentedItem/{2}/{3}\uFFFD \
+  has received a comment.
 
-m.friend_name_changed = "[{0}|command://ViewMember/{1}]" is {2}'s new name.
-m.friend_status_changed = [{0}|command://ViewMember/{1}] {2}.
+m.friend_name_changed = "\uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD" is {2}'s new name.
+m.friend_status_changed = \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD {2}.
 
-m.party_invite = Party invite: [{2}|command://JoinParty/{3}] from \
-[{0}|command://ViewMember/{1}]. [Details|command://GetPartyDetail/{3}].
-m.party_left = You have left the party. [Rejoin|command://JoinParty/{0}].
+m.party_invite = Party invite: \uFFFC{2}\uFFFCcommand://JoinParty/{3}\uFFFD from \
+  \uFFFC{0}\uFFFCcommand://ViewMember/{1}\uFFFD. \
+  \uFFFCDetails\uFFFCcommand://GetPartyDetail/{3}\uFFFD.
+m.party_left = You have left the party. \uFFFCRejoin\uFFFCcommand://JoinParty/{0}\uFFFD.
 
 m.song = Now playing: "{0}" by "{1}".
 
 m.money_gained = You have gained {0}.
 m.money_lost = {0} have been deducted.
 
-m.trophy_earned = You earned the [{0}|command://ViewTrophies/{1}] trophy!
-m.prize_earned = You were awarded a prize: [{0}|command://ViewStuff/{1}]!
-m.badge_awarded = You earned the [{0} Stamp|command://ViewPassport] and received {1} coins!
+m.trophy_earned = You earned the \uFFFC{0}\uFFFCcommand://ViewTrophies/{1}\uFFFD trophy!
+m.prize_earned = You were awarded a prize: \uFFFC{0}\uFFFCcommand://ViewStuff/{1}\uFFFD!
+m.badge_awarded = You earned the \uFFFC{0} Stamp\uFFFCcommand://ViewPassport\uFFFD \
+  and received {1} coins!
