Display "Connecting..." between the time that world-client.swf has loaded and when we're actually connected to the game/world server and have something else useful to display. Modified LoadingSpinner to have a status mode and a progress mode and nixed the indeterminate behavior mode (you need to provide status text now in that case).

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -12,14 +12,22 @@
 # h.foo = help message
 # x.foo = optional translation that may or may not be present
 
+#
 # Reboot warning
+
 m.reboot_warning = Warning: Whirled will restart in {0} minutes. {1}
 m.rebooting_now = Whirled is now restarting.
 
+#
 # Version checking
-m.min_flash_version = <html>Your Flash player must be upgraded.<br>You have version {0} but version {1} or greater is required.<br>Please go to <a href='http://www.adobe.com/'>http://www.adobe.com/</a> to upgrade your player.</html>
 
+m.min_flash_version = <html>Your Flash player must be upgraded.<br>You have version \
+  {0} but version {1} or greater is required.<br>Please go to \
+  <a href='http://www.adobe.com/'>http://www.adobe.com/</a> to upgrade your player.</html>
+
+#
 # LogonPanel
+
 t.logon = Log on to your Whirled account
 l.email = Email address:
 l.password = Password:
@@ -27,7 +35,9 @@ b.logon = Log on
 b.logout = Log out
 p.sign_up = Don't have a Whirled account yet?
 
+#
 # WarningDialog
+
 t.warning = Please Read
 l.warning_intro = A message from the Peas Keepers:
 m.warning_close_in = Can close in... {0}
@@ -43,9 +53,13 @@ m.no_such_user = No account could be found for the supplied email address.
 m.invalid_password = The password entered was incorrect.
 m.server_closed = The server is currently under maintenance.
 m.no_guests = Guests access is not currently enabled.
-m.banned = <a href="http://www.whirled.com/#support">Sorry! Due to links with banned accounts, your access<br>to Whirled has been blocked. If you believe this is in error, please<br>click this message to inquire about your account's status.</a>
+m.banned = <a href="http://www.whirled.com/#support">Sorry! Due to links with banned \
+  accounts, your access<br>to Whirled has been blocked. If you believe this is in error, \
+  please<br>click this message to inquire about your account's status.</a>
 
+#
 # Tips
+
 #m.tip_1 = Tip: Use your browser's back button to return to the previous room.
 #m.tip_2 = Tip: Hold F6 to select or click chat text in an overlay.
 #m.tip_2 = Tip: Press F7 or F8 to quickly switch between multiple chat tabs.
@@ -56,15 +70,21 @@ m.banned = <a href="http://www.whirled.com/#support">Sorry! Due to links with ba
 #m.tip_2 = Tip: Hold F4 to click through avatars.
 #m.tip_3 = Tip: Hold F5 to click through furniture.
 
+#
 # About dialog
+
 b.about = About Whirled....
 t.about = About Whirled
 m.about = <html><p align='center'><font size='+8'>Whirled</font><br>Copyright &#x00A9; 2007 - 2009, Three Rings Design, Inc.<br><br>Client build: {0}<br>Flash player version: {1}</p></html>
 
+#
 # Music dialog
+
 t.music = Currently playing music
 
+#
 # Control bar
+
 b.chat_send = send
 i.volume = Sound volume
 i.zoom = Zoom the room view
@@ -87,15 +107,21 @@ i.party = Parties! (BETA)
 i.homePageGrid = View your Whirled Places
 i.music = View the currently playing music
 
+#
 # Tooltip for sliders
+
 i.percent_fmt = {0}%
 
+#
 # Friends list
+
 l.emptyStatus = Enter status...
 l.statusPrompt = is 
 m.guest_friends = Register today to make friends on Whirled!
 
+#
 # Header bar
+
 i.go = Go...
 b.back = Back
 l.visit_friends = Visit friends
@@ -119,12 +145,16 @@ t.inviteGame = Configure your invitation to {0}
 
 m.room_owner = owner: {0}
 
+#
 # Server-side actions
+
 e.entrance_denied = That room is locked.
 e.cannot_add_pet = You are not allowed to add pets to this room.
 e.already_walking = You are already walking a pet and can only walk one at a time.
 
+#
 # World sprites descriptions
+
 m.avatar = avatar
 m.decor = backdrop
 m.furni = furniture
@@ -135,7 +165,9 @@ m.game = game
 
 t.entity_popup = Popup from {0}: {1}
 
+#
 # Menu stuff
+
 b.go_home = Go home
 
 l.avAction = Play custom action...
@@ -202,6 +234,9 @@ l.friends = Friends
 
 b.relogon_guest = Re-logon as a guest
 
+#
+# Embed Dialog
+
 t.share_room = Share this Room
 t.share_game = Share this Game
 m.sharing = Share this place on your web page or with your friends. Anyone that registers \
@@ -242,7 +277,9 @@ m.stub_share = Download a SWF that links directly to this room! This is \
   will allow direct uploading of media.
 b.stub_share = Download SWF
 
+#
 # Problems with urls
+
 e.no_navigate = Unable to load requested page: {0}
 t.missedUrl = Unable to navigate to URL
 m.missedUrl = Sorry, we're unable to load the requested page directly. \
@@ -250,12 +287,16 @@ m.missedUrl = Sorry, we're unable to load the requested page directly. \
   restrict this ability. Please copy the URL to the address bar of your \
   browser to proceed.
 
+#
 # Away related messages
+
 t.backFromAway = You are away from the keyboard.
 b.Imback = I'm back!
 m.awayDefault = I'm away from the keyboard.
 
+#
 # Follow related messages
+
 m.invited_to_follow = You have invited {0} to follow you.
 m.being_followed = {0} is now following you.
 m.follows_cleared = You are no longer being followed.
@@ -273,14 +314,17 @@ e.follow_invite_expired = That player has left or no longer wants to be followed
 m.following = You are now following {0}. Click your own avatar to stop following.
 m.not_following = You are no longer following {0}.
 
+#
 # Chat prefs
+
 t.chat_prefs = Your chat settings
 l.display_name = Display name:
 l.log_to_chat = Log to chat
 
+#
+# Misc messages
+
 # Avatar
-b.change_avatar = Change avatar...
-b.avatars_full = View full list...
 m.static_avatar = Your avatar has been replaced with a static image due to a high room population.
 
 # Pets
@@ -296,7 +340,9 @@ m.in_room = People in room: {0}
 m.entered_room = {0} entered the room.
 m.left_room = {0} left the room.
 
+#
 # Complain dialog
+
 t.complain = Complain about {0}
 m.complain_descrip = If a player is being offensive or behaving badly you can file a complaint \
   against them here.  This complaint will be read by our support staff.  The player you're \
@@ -321,6 +367,10 @@ b.order_pet_follow = Order to follow
 b.order_pet_go_home = Send home
 b.order_pet_sleep = Send to sleep
 
+# Avatar menu
+b.change_avatar = Change avatar...
+b.avatars_full = View full list...
+
 #
 # Avatar intro dialog messages
 
@@ -330,12 +380,20 @@ m.avatar_intro = You start life as a Happy piece of Tofu. If you want to \
 
 #
 # Home page dialog messages
+
 t.home_page = My Whirled Places
 
 #
 # Stars
+
 i.star0 = Awful
 i.star1 = Poor
 i.star2 = Average
 i.star3 = Good
 i.star4 = Excellent
+
+#
+# LoadingSpinner messages
+
+m.ls_connecting = Connecting...
+m.ls_loading = Loading...
